<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.5</version>
	</parent>
	<groupId>IndirektniPSF</groupId>
	<artifactId>backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>backend</name>
	<description>Backend for IndirektniPSF app</description>
	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<!-- Core Starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<!-- Dev Tools for auto restart -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- PostgreSQL Driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

			<!-- other dependencies -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>5.1.0</version> <!-- Check for latest version -->
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>5.1.0</version> <!-- Check for latest version -->
			</dependency>

		<!-- MySQL Driver -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.0.33</version>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- In-Memory Database for Testing -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.2.220</version>
			<scope>test</scope>
		</dependency>

		<!-- Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- SpringDoc OpenAPI UI -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.6.3</version>
		</dependency>
		<!-- JJWT (JSON Web Token) -->
<!--		<dependency>-->
<!--			<groupId>io.jsonwebtoken</groupId>-->
<!--			<artifactId>jjwt</artifactId>-->
<!--			<version>0.9.1</version>  &lt;!&ndash; use the latest version &ndash;&gt;-->
<!--		</dependency>-->

		<!-- JJWT -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.1.Final</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
<!--		<profile>-->
<!--			<id>build-frontend</id>-->
<!--			<activation>-->
<!--				<activeByDefault>true</activeByDefault>-->
<!--			</activation>-->
<!--			<build>-->
<!--				<plugins>-->

<!--					<plugin>-->

<!--						<groupId>com.github.eirslett</groupId>-->
<!--						<artifactId>frontend-maven-plugin</artifactId>-->
<!--						&lt;!&ndash; Use the latest released version:-->
<!--                                  https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ &ndash;&gt;-->
<!--						<version>1.12.1</version>-->
<!--						<configuration>-->
<!--							<nodeVersion>v18.16.0 </nodeVersion>-->
<!--							<npmVersion>9.5.1</npmVersion>-->
<!--							<workingDirectory>src/frontend</workingDirectory>-->
<!--						</configuration>-->
<!--						<executions>-->
<!--							<execution>-->
<!--								<id>install node and npm</id>-->
<!--								<goals>-->
<!--									<goal>install-node-and-npm</goal>-->
<!--								</goals>-->
<!--								&lt;!&ndash;							<configuration>&ndash;&gt;-->
<!--								&lt;!&ndash;								<nodeVersion>v18.14.2 </nodeVersion>&ndash;&gt;-->
<!--								&lt;!&ndash;								<npmVersion>9.5.0</npmVersion>&ndash;&gt;-->
<!--								&lt;!&ndash;							</configuration>&ndash;&gt;-->
<!--							</execution>-->
<!--							<execution>-->
<!--								<id>npm install</id>-->
<!--								<goals>-->
<!--									<goal>npm</goal>-->
<!--								</goals>-->
<!--								<configuration>-->
<!--									<arguments>install</arguments>-->
<!--								</configuration>-->
<!--							</execution>-->
<!--							<execution>-->
<!--								<id>npm run build</id>-->
<!--								<goals>-->
<!--									<goal>npm</goal>-->
<!--								</goals>-->
<!--								<configuration>-->
<!--									<arguments>run build</arguments>-->
<!--								</configuration>-->
<!--							</execution>-->
<!--						</executions>-->
<!--					</plugin>-->
<!--					<plugin>-->
<!--												<groupId>org.apache.maven.plugins</groupId>-->
<!--						<artifactId>maven-resources-plugin</artifactId>-->
<!--												<version>3.2.0</version>-->
<!--						<executions>-->
<!--							<execution>-->
<!--								<id>copy-build-folder</id>-->
<!--								<phase>process-classes</phase>-->
<!--								<goals>-->
<!--									<goal>copy-resources</goal>-->
<!--								</goals>-->
<!--								<configuration>-->
<!--									<resources>-->
<!--										<resource>-->
<!--											<directory>src/frontend/build</directory>-->
<!--										</resource>-->
<!--									</resources>-->
<!--									<outputDirectory>${basedir}/target/classes/static</outputDirectory>-->
<!--								</configuration>-->
<!--							</execution>-->
<!--						</executions>-->
<!--					</plugin>-->
<!--				</plugins>-->
<!--			</build>-->
<!--		</profile>-->
	</profiles>

</project>
